@@ -56,6 +56,6 @@ void del_mdas(struct list *mdas);
 
 const char *vgname_from_mda(const struct format_type *fmt,
 			    struct device_area *dev_area, struct id *vgid,
-			    uint32_t *vgstatus);
+			    uint32_t *vgstatus, char **creation_host);
 
 #endif
