@@ -28,7 +28,8 @@ const char *text_vgname_import(const struct format_type *fmt,
 			       off_t offset, uint32_t size,
 			       off_t offset2, uint32_t size2,
 			       checksum_fn_t checksum_fn, uint32_t checksum,
-			       struct id *vgid, uint32_t *vgstatus)
+			       struct id *vgid, uint32_t *vgstatus,
+			       char **creation_host)
 {
 	struct config_tree *cft;
 	struct text_vg_version_ops **vsn;
@@ -57,7 +58,8 @@ const char *text_vgname_import(const struct format_type *fmt,
 		if (!(*vsn)->check_version(cft))
 			continue;
 
-		if (!(vgname = (*vsn)->read_vgname(fmt, cft, vgid, vgstatus)))
+		if (!(vgname = (*vsn)->read_vgname(fmt, cft, vgid, vgstatus,
+						   creation_host)))
 			goto_out;
 
 		break;
