@@ -175,7 +175,8 @@ static struct labeller *_find_labeller(struct device *dev, char *buf,
       out:
 	if (!found) {
 		if ((info = info_from_pvid(dev->pvid)))
-			lvmcache_update_vgname_and_id(info, ORPHAN, ORPHAN, 0);
+			lvmcache_update_vgname_and_id(info, ORPHAN, ORPHAN,
+						      0, NULL);
 		log_very_verbose("%s: No label detected", dev_name(dev));
 	}
 
@@ -267,7 +268,8 @@ int label_read(struct device *dev, struct label **result)
 		stack;
 
 		if ((info = info_from_pvid(dev->pvid)))
-			lvmcache_update_vgname_and_id(info, ORPHAN, ORPHAN, 0);
+			lvmcache_update_vgname_and_id(info, ORPHAN, ORPHAN,
+						      0, NULL);
 
 		goto out;
 	}
@@ -348,7 +350,8 @@ int label_verify(struct device *dev)
 		stack;
 
 		if ((info = info_from_pvid(dev->pvid)))
-			lvmcache_update_vgname_and_id(info, ORPHAN, ORPHAN, 0);
+			lvmcache_update_vgname_and_id(info, ORPHAN, ORPHAN,
+						      0, NULL);
 
 		goto out;
 	}
